@@ -1,4 +1,5 @@
 using System;
+using System.Text;
 using System.Collections.Generic;
 
 using Abakos.Compiler;
@@ -9,7 +10,14 @@ namespace Abakos
     {
         public static void Main(string [] args)
         {
-            Expression expression = new Expression(args.Length > 0 ? args[0] : "0");
+            StringBuilder raw_expression = new StringBuilder();
+            
+            foreach(string arg in args) {
+                raw_expression.Append(arg);
+                raw_expression.Append(" ");
+            }
+        
+            Expression expression = new Expression(args.Length > 0 ? raw_expression.ToString() : "0");
             
             Console.Write("Infix: ");
             foreach(Symbol token in expression.InfixQueue) {
@@ -25,13 +33,17 @@ namespace Abakos
             
             Console.WriteLine("Executing...\n");
             
-            Stack<Symbol> stack = expression.Evaluate();
-            
-            Console.WriteLine("");
-            Console.WriteLine("Result Stack:");
-            
-            while(stack.Count > 0) {
-                Console.WriteLine("  {0}", stack.Pop());
+            try {
+                Stack<Symbol> stack = expression.Evaluate();
+                
+                Console.WriteLine("");
+                Console.WriteLine("Result Stack:");
+                
+                while(stack.Count > 0) {
+                    Console.WriteLine("  {0}", stack.Pop());
+                }
+            } catch(Exception e) {
+                Console.WriteLine("Error handling expression: {0}: {1}", e.GetType().Name, e.Message);
             }
         }
     }
