@@ -1,0 +1,13 @@
+What is Abakos?
+
+	Just a fun little expression parser/evaluator I've started
+	writing this weekend after looking with much nostalgia over an old
+	version of something similar I implemented in C many years ago; this
+	is nothing fantastic, just fun... there's no real use for it and it's
+	nothing new
+
+Why?
+
+	Because I was bored and this kind of problem entertains me
+
+
